Update notebooks and function with tested script

--- a/aws_lambda_study.ipynb
+++ b/aws_lambda_study.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -160,7 +160,10 @@
       "gabrielgoncalves@yahoo.com\n",
       "contato@gymbrain.com.br\n",
       "fausda@hotmail.com\n",
-      "duahs@dhasida.com\n"
+      "duahs@dhasida.com\n",
+      "jhonatan@gmail.com\n",
+      "jhonatan@gmail.com\n",
+      "gabriel@codenomics.cloud\n"
      ]
     }
    ],
@@ -172,10 +175,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from function.lambda_function import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gabrielgoncalves@yahoo.com\n",
+      "contato@gymbrain.com.br\n",
+      "fausda@hotmail.com\n",
+      "duahs@dhasida.com\n",
+      "jhonatan@gmail.com\n",
+      "jhonatan@gmail.com\n",
+      "gabriel@codenomics.cloud\n"
+     ]
+    }
+   ],
+   "source": [
+    "lambda_handler()"
+   ]
   },
   {
    "cell_type": "code",
