Add email validation to lambda_function.py

--- a/python_email.ipynb
+++ b/python_email.ipynb
@@ -173,6 +173,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Faça sua avaliação psiquiátrica de forma gratuita\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Faça sua avaliação psiquiátrica de \\\n",
+    "forma gratuita\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {
     "scrolled": true
@@ -883,7 +902,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1027,6 +1048,254 @@
     "\n",
     "# Send email to rmiotto@gmail.com and gabriel@codenomics.cloud\n",
     "print(invalid_emails)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Teste lambda_function.py\n",
+    "from function.lambda_function import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "<!DOCTYPE html>\n",
+      "    <html>\n",
+      "      <head>\n",
+      "        <meta charset=\"utf-8\">\n",
+      "</head>\n",
+      "<body>\n",
+      "<table align=\"center\" border=\"0\" cellpadding=\"0\" cellspacing=\"0\" style=\"width:700px;\">\n",
+      "   <tbody>\n",
+      "      <tr>\n",
+      "         <td>\n",
+      "            <table align=\"center\" border=\"0\" cellpadding=\"0\" cellspacing=\"0\" style=\"width:700px;\">\n",
+      "               <tbody>\n",
+      "                  <tr>\n",
+      "                     <td style=\"width: 150px;\"><img alt=\"\" border=\"0\" src=\"https://s3.amazonaws.com/transcribe-test-bucket-gymbrain/gymbrain.png\" style=\"display: block;\" /></td>\n",
+      "\n",
+      "                  </tr>\n",
+      "\n",
+      "               </tbody>\n",
+      "            </table>\n",
+      "         </td>\n",
+      "      </tr>\n",
+      "      <tr>\n",
+      "         <td style=\"height: 250px;\">\n",
+      "            <table align=\"center\" border=\"0\" cellpadding=\"0\" cellspacing=\"0\" style=\"width:500px;\">\n",
+      "               <tbody>\n",
+      "                  <tr>\n",
+      "                     <td style=\"width:500px;font-family: arial;font-weight: bold;font-size:30px;color: #000001;text-align: center;padding-bottom:15px\">Ainda na dúvida sobre a sua situação psiquiátrica?</td>\n",
+      "                  </tr>\n",
+      "                  <tr>\n",
+      "                     <td style=\"width:700px;font-family: arial;font-size:20px;color: #000000;text-align: center;line-height:30px;padding-bottom:15px\">Entendemos a dificuldade em lidar com os problemas que você pode estar sofrendo, registramos seu interesse, é por vezes é difícil prosseguir.<br>\n",
+      "                        Vamos juntos?!!\n",
+      "                         <br><br>\n",
+      "                        Nossa ferramenta de avaliação foi elaborada com muito cuidado e critérios científicos, não será cobrado nada pelo uso da sugestão diagnostica e o processo leva uns 4 minutos!\n",
+      "                        <br><br>\n",
+      "                        Acesse através do <a href=\"https://appgymbrain.com\"><b>link</b></a> e nós da GyMBrain teremos o prazer em ajudá-lo com o que há de mais avançado em diagnóstico psiquiátrico.\n",
+      "                        <br><br>\n",
+      "                        <a href=\"https://appgymbrain.com\"><b>Saiba mais a repeito!!</b></a><br><br>\n",
+      "\n",
+      "\n",
+      "                  </td>\n",
+      "                  </tr>\n",
+      "\n",
+      "               </tbody>\n",
+      "            </table>\n",
+      "         </td>\n",
+      "      </tr>\n",
+      "      <tr>\n",
+      "         <td style=\"background-color: #1C6D98;\">\n",
+      "            <table align=\"center\" border=\"0\" cellpadding=\"0\" cellspacing=\"0\" style=\"width:600px;\">\n",
+      "               <tbody>\n",
+      "                  <tr>\n",
+      "                     <td style=\"width: 258px;\"><img alt=\"\" border=\"0\" src=\"http://www.hnehealth.nsw.gov.au/hnet/PublishingImages/Pages/Hunter-New-England-Training-in-Psychiatry-%28HNET%29/Registrar%20Brain%20Photo.JPG\" style=\"display: block;\" /></td>\n",
+      "                     <td style=\"width: 342px;\">\n",
+      "\n",
+      "                     </td>\n",
+      "                  </tr>\n",
+      "               </tbody>\n",
+      "            </table>\n",
+      "         </td>\n",
+      "      </tr>\n",
+      "\n",
+      "      <tr>\n",
+      "         <td style=\"background-color: #B0D154;padding-top:22px;padding-bottom:22px;\">\n",
+      "            <table align=\"center\" border=\"0\" cellpadding=\"0\" cellspacing=\"0\" style=\"width:536px;\">\n",
+      "               <tbody>\n",
+      "                  <tr>\n",
+      "                     <td align=\"right\" style=\"width: 68px;font-family: arial;font-size:13px;color: #ffffff;text-align: right;line-height:13px;\">Siga-nos:</td>\n",
+      "                     <td style=\"width: 146px;\">\n",
+      "                        <table align=\"center\" border=\"0\" cellpadding=\"0\" cellspacing=\"0\" style=\"width:120px;\">\n",
+      "                           <tbody>\n",
+      "                              <tr>\n",
+      "                                 <td align=\"center\"><img alt=\"\" border=\"0\" height=\"15\" src=\"http://emailmarketingtemplates.com.br/templates/newsletter/business-4/Business-4_7.png\" style=\"width:15px; height:15px;\" width=\"15\" /></td>\n",
+      "                                 <td align=\"center\"><img alt=\"\" border=\"0\" height=\"15\" src=\"http://emailmarketingtemplates.com.br/templates/newsletter/business-4/Business-4_6.png\" style=\"width:15px; height:15px;\" width=\"15\" /></td>\n",
+      "                                 <td align=\"center\"><img alt=\"\" border=\"0\" height=\"15\" src=\"http://emailmarketingtemplates.com.br/templates/newsletter/business-4/Business-4_9.png\" style=\"width:15px; height:15px;\" width=\"15\" /></td>\n",
+      "                                 <td align=\"center\"><img alt=\"\" border=\"0\" height=\"15\" src=\"http://emailmarketingtemplates.com.br/templates/newsletter/business-4/Business-4_8.png\" style=\"width:15px; height:15px;\" width=\"15\" /></td>\n",
+      "                              </tr>\n",
+      "                           </tbody>\n",
+      "                        </table>\n",
+      "                     </td>\n",
+      "                     <td align=\"right\" style=\"width: 322px;font-family: arial;font-size:13px;color: #ffffff;text-align: right;line-height:13px;\"><a href=\"http://gymbrain.com.br\" style=\"color: #ffffff;text-decoration: none;\"> gymbrain.com.br</a></td>\n",
+      "                  </tr>\n",
+      "               </tbody>\n",
+      "            </table>\n",
+      "         </td>\n",
+      "      </tr>\n",
+      "   </tbody>\n",
+      "</table>\n",
+      "</body>\n",
+      "</html>\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(email_content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'content' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-017556a809df>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcontent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'content' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print(content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting list of emails from ClickOn Database\n",
+      "Success! gabrielgoncalves@yahoo.com is a valid email\n",
+      "Success! contato@gymbrain.com.br is a valid email\n",
+      "Success! fausda@hotmail.com is a valid email\n",
+      "Email duahs@dhasida.com does not exist.\n",
+      "Success! jhonatan@gmail.com is a valid email\n",
+      "Success! jhonatan@gmail.com is a valid email\n",
+      "Success! gabriel@codenomics.cloud is a valid email\n",
+      "Success! emelyn.lima@hotmail.com is a valid email\n",
+      "Success! gabrielgoncalves@yahoo.com is a valid email\n",
+      "Success! gabrielgoncalvesbr@gmail.com is a valid email\n",
+      "Success! juliaechico@yahoo.com.br is a valid email\n",
+      "Success! maia_wesley@outlook.com is a valid email\n",
+      "Success! emelyn.lima@hotmail.com is a valid email\n",
+      "Email diajsiodajis@gmail.com does not exist.\n",
+      "Success! milynlima@gmail.com is a valid email\n",
+      "Success! milynlima@gmail.com is a valid email\n",
+      "Email dknasjda@gmail.com does not exist.\n",
+      "Success! mkmkmkm@gmail.com is a valid email\n",
+      "Email dmkasmdka@gmail.com does not exist.\n",
+      "Success! uhuhuh@gmail.com is a valid email\n",
+      "Email dnajs@gmail.com does not exist.\n",
+      "Success! sdhuas@gmail.com is a valid email\n",
+      "After ssl.create_default_context\n",
+      "Process ended with sucess at: Fri Jun 14 15:03:45 2019\n"
+     ]
+    }
+   ],
+   "source": [
+    "lambda_handler('t', 'a')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting list of emails from ClickOn Database\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Connect to ClickOn database and execute query on core_clickon table\n",
+    "db = create_engine(\n",
+    "'postgresql+pg8000://root:hopes030411@gymbraininstance.c1pkp7hr6szo.us-east-1.rds.amazonaws.com:5432/gymbrain')\n",
+    "\n",
+    "results = db.execute(\n",
+    "\"\"\"\n",
+    "SELECT * FROM public.core_clickon \n",
+    "WHERE points_clickon is NULL\n",
+    "\"\"\"\n",
+    ")\n",
+    "\n",
+    "print('Getting list of emails from ClickOn Database')\n",
+    "list_emails = set([r.email for r in results])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(list_emails)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(set(list_emails))"
    ]
   },
   {
